api/gtkdoc_h/239/geany-gtkdoc.h

typedef struct GeanyDocument GeanyDocument;
typedef struct PluginInfo PluginInfo;
typedef struct GeanyData GeanyData;
typedef struct GeanyPlugin GeanyPlugin;
typedef struct _SpawnWriteData SpawnWriteData;
struct _SpawnWriteData {
	const gchar* ptr;
	gsize size;
};
struct GeanyData {
	GeanyApp* app;
	GeanyMainWidgets* main_widgets;
	GPtrArray* documents_array;
	GPtrArray* filetypes_array;
	GeanyPrefs* prefs;
	GeanyInterfacePrefs* interface_prefs;
	GeanyToolbarPrefs* toolbar_prefs;
	GeanyEditorPrefs* editor_prefs;
	GeanyFilePrefs* file_prefs;
	GeanySearchPrefs* search_prefs;
	GeanyToolPrefs* tool_prefs;
	GeanyTemplatePrefs* template_prefs;
	gpointer* _compat;
	GSList* filetypes_by_title;
	GObject* object;
};
struct GeanyDocument {
	gboolean is_valid;
	gint index;
	gboolean has_tags;
	gchar* file_name;
	gchar* encoding;
	gboolean has_bom;
	GeanyEditor* editor;
	GeanyFiletype* file_type;
	TMSourceFile* tm_file;
	gboolean readonly;
	gboolean changed;
	gchar* real_path;
	guint id;
	struct GeanyDocumentPrivate* priv;
};
struct GeanyPlugin {
	PluginInfo* info;
	GeanyData* geany_data;
	GeanyPluginFuncs* funcs;
	GeanyProxyFuncs* proxy_funcs;
	struct GeanyPluginPrivate* priv;
};
struct PluginInfo {
	const gchar* name;
	const gchar* description;
	const gchar* version;
	const gchar* author;
};
gint plugin_version_check (gint abi);
void plugin_set_info (PluginInfo *info);
GtkWidget* plugin_configure (GtkDialog *dialog);
void plugin_configure_single (GtkWidget *parent);
void plugin_init (GeanyData *data);
void plugin_help ();
gpointer plugin_get_document_data (struct GeanyPlugin *plugin, struct GeanyDocument *doc, const gchar *key);
void plugin_set_document_data (struct GeanyPlugin *plugin, struct GeanyDocument *doc, const gchar *key, gpointer data);
void plugin_set_document_data_full (struct GeanyPlugin *plugin, struct GeanyDocument *doc, const gchar *key, gpointer data, GDestroyNotify free_func);
void project_write_config (void);
void sci_set_text (ScintillaObject *sci, const gchar *text);
void sci_start_undo_action (ScintillaObject *sci);
void sci_end_undo_action (ScintillaObject *sci);
void sci_set_marker_at_line (ScintillaObject *sci, gint line_number, gint marker);
void sci_delete_marker_at_line (ScintillaObject *sci, gint line_number, gint marker);
gboolean sci_is_marker_set_at_line (ScintillaObject *sci, gint line, gint marker);
gint sci_get_line_from_position (ScintillaObject *sci, gint position);
gint sci_get_col_from_position (ScintillaObject *sci, gint position);
gint sci_get_position_from_line (ScintillaObject *sci, gint line);
gint sci_get_current_position (ScintillaObject *sci);
void sci_set_current_position (ScintillaObject *sci, gint position, gboolean scroll_to_caret);
gint sci_get_line_count (ScintillaObject *sci);
void sci_set_selection_start (ScintillaObject *sci, gint position);
void sci_set_selection_end (ScintillaObject *sci, gint position);
gint sci_get_line_end_position (ScintillaObject *sci, gint line);
gint sci_get_selection_start (ScintillaObject *sci);
gint sci_get_selection_end (ScintillaObject *sci);
void sci_replace_sel (ScintillaObject *sci, const gchar *text);
gint sci_get_length (ScintillaObject *sci);
gint sci_get_lexer (ScintillaObject *sci);
gint sci_get_line_length (ScintillaObject *sci, gint line);
gchar* sci_get_line (ScintillaObject *sci, gint line_num);
void sci_get_text (ScintillaObject *sci, gint len, gchar *text);
gchar* sci_get_contents (ScintillaObject *sci, gint buffer_len);
void sci_get_selected_text (ScintillaObject *sci, gchar *text);
gchar* sci_get_selection_contents (ScintillaObject *sci);
gint sci_get_selected_text_length (ScintillaObject *sci);
gboolean sci_get_line_is_visible (ScintillaObject *sci, gint line);
void sci_ensure_line_is_visible (ScintillaObject *sci, gint line);
gint sci_get_tab_width (ScintillaObject *sci);
gchar sci_get_char_at (ScintillaObject *sci, gint pos);
gboolean sci_has_selection (ScintillaObject *sci);
void sci_scroll_caret (ScintillaObject *sci);
gint sci_find_text (ScintillaObject *sci, gint flags, struct Sci_TextToFind *ttf);
void sci_set_font (ScintillaObject *sci, gint style, const gchar *font, gint size);
void sci_goto_line (ScintillaObject *sci, gint line, gboolean unfold);
gint sci_get_style_at (ScintillaObject *sci, gint position);
void sci_get_text_range (ScintillaObject *sci, gint start, gint end, gchar *text);
gchar* sci_get_contents_range (ScintillaObject *sci, gint start, gint end);
void sci_insert_text (ScintillaObject *sci, gint pos, const gchar *text);
void sci_send_command (ScintillaObject *sci, gint cmd);
gint sci_get_current_line (ScintillaObject *sci);
void sci_indicator_set (ScintillaObject *sci, gint indic);
void sci_indicator_clear (ScintillaObject *sci, gint pos, gint len);
gint sci_find_matching_brace (ScintillaObject *sci, gint pos);
gint sci_get_selection_mode (ScintillaObject *sci);
void sci_set_selection_mode (ScintillaObject *sci, gint mode);
void sci_set_line_indentation (ScintillaObject *sci, gint line, gint indent);
gint sci_get_line_indentation (ScintillaObject *sci, gint line);
void search_show_find_in_files_dialog (const gchar *dir);
gboolean spawn_check_command (const gchar *command_line, gboolean execute, GError **error);
gboolean spawn_kill_process (GPid pid, GError **error);
gboolean spawn_async (const gchar *working_directory, const gchar *command_line, gchar **argv, gchar **envp, GPid *child_pid, GError **error);
gboolean spawn_write_data (GIOChannel *channel, GIOCondition condition, SpawnWriteData *data);
gboolean spawn_sync (const gchar *working_directory, const gchar *command_line, gchar **argv, gchar **envp, SpawnWriteData *stdin_data, GString *stdout_data, GString *stderr_data, gint *exit_status, GError **error);
const gchar* symbols_get_context_separator (gint ft_id);
gchar* tm_get_real_path (const gchar *file_name);