api/geany-1.0.vapi

	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_configure")]
	public static unowned Gtk.Widget plugin_configure (Gtk.Dialog dialog);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_configure_single")]
	public static void plugin_configure_single (Gtk.Widget parent);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_get_document_data")]
	[Version (since = "1.29")]
	public static void* plugin_get_document_data (void* plugin, void* doc, string key);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_help")]
	public static void plugin_help ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_init")]
	public static void plugin_init (Geany.Data data);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_set_document_data")]
	[Version (since = "1.29")]
	public static void plugin_set_document_data (void* plugin, void* doc, string key, void* data);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_set_document_data_full")]
	[Version (since = "1.29")]
	public static void plugin_set_document_data_full (void* plugin, void* doc, string key, void* data, GLib.DestroyNotify free_func);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_set_info")]
	public static void plugin_set_info (Geany.PluginInfo info);
	[CCode (cheader_filename = "geanyplugin.h", cname = "plugin_version_check")]
	public static int plugin_version_check (int abi);
	[CCode (cheader_filename = "geanyplugin.h", cname = "project_write_config")]
	[Version (since = "1.25")]
	public static void project_write_config ();
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_delete_marker_at_line")]
	public static void sci_delete_marker_at_line (GeanyScintilla.ScintillaObject sci, int line_number, int marker);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_end_undo_action")]
	public static void sci_end_undo_action (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_ensure_line_is_visible")]
	public static void sci_ensure_line_is_visible (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_find_matching_brace")]
	[Version (since = "0.15")]
	public static int sci_find_matching_brace (GeanyScintilla.ScintillaObject sci, int pos);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_find_text")]
	public static int sci_find_text (GeanyScintilla.ScintillaObject sci, int flags, void* ttf);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_char_at")]
	public static char sci_get_char_at (GeanyScintilla.ScintillaObject sci, int pos);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_col_from_position")]
	public static int sci_get_col_from_position (GeanyScintilla.ScintillaObject sci, int position);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_contents")]
	[Version (since = "1.23")]
	public static string sci_get_contents (GeanyScintilla.ScintillaObject sci, int buffer_len);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_contents_range")]
	[Version (since = "0.17")]
	public static string sci_get_contents_range (GeanyScintilla.ScintillaObject sci, int start, int end);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_current_line")]
	public static int sci_get_current_line (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_current_position")]
	public static int sci_get_current_position (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_length")]
	public static int sci_get_length (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_lexer")]
	public static int sci_get_lexer (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line")]
	public static string sci_get_line (GeanyScintilla.ScintillaObject sci, int line_num);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_count")]
	public static int sci_get_line_count (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_end_position")]
	public static int sci_get_line_end_position (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_from_position")]
	public static int sci_get_line_from_position (GeanyScintilla.ScintillaObject sci, int position);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_indentation")]
	[Version (since = "0.19")]
	public static int sci_get_line_indentation (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_is_visible")]
	public static bool sci_get_line_is_visible (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_line_length")]
	public static int sci_get_line_length (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_position_from_line")]
	public static int sci_get_position_from_line (GeanyScintilla.ScintillaObject sci, int line);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selected_text")]
	[Version (deprecated = true)]
	public static void sci_get_selected_text (GeanyScintilla.ScintillaObject sci, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selected_text_length")]
	public static int sci_get_selected_text_length (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selection_contents")]
	[Version (since = "0.17")]
	public static string sci_get_selection_contents (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selection_end")]
	public static int sci_get_selection_end (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selection_mode")]
	public static int sci_get_selection_mode (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_selection_start")]
	public static int sci_get_selection_start (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_style_at")]
	public static int sci_get_style_at (GeanyScintilla.ScintillaObject sci, int position);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_tab_width")]
	[Version (since = "0.15")]
	public static int sci_get_tab_width (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_text")]
	[Version (deprecated = true)]
	public static void sci_get_text (GeanyScintilla.ScintillaObject sci, int len, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_get_text_range")]
	[Version (deprecated = true)]
	public static void sci_get_text_range (GeanyScintilla.ScintillaObject sci, int start, int end, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_goto_line")]
	public static void sci_goto_line (GeanyScintilla.ScintillaObject sci, int line, bool unfold);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_has_selection")]
	[Version (since = "0.15")]
	public static bool sci_has_selection (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_indicator_clear")]
	[Version (since = "0.16")]
	public static void sci_indicator_clear (GeanyScintilla.ScintillaObject sci, int pos, int len);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_indicator_set")]
	[Version (since = "0.16")]
	public static void sci_indicator_set (GeanyScintilla.ScintillaObject sci, int indic);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_insert_text")]
	public static void sci_insert_text (GeanyScintilla.ScintillaObject sci, int pos, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_is_marker_set_at_line")]
	public static bool sci_is_marker_set_at_line (GeanyScintilla.ScintillaObject sci, int line, int marker);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_replace_sel")]
	public static void sci_replace_sel (GeanyScintilla.ScintillaObject sci, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_scroll_caret")]
	public static void sci_scroll_caret (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_send_command")]
	[Version (since = "0.16")]
	public static void sci_send_command (GeanyScintilla.ScintillaObject sci, int cmd);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_current_position")]
	public static void sci_set_current_position (GeanyScintilla.ScintillaObject sci, int position, bool scroll_to_caret);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_font")]
	public static void sci_set_font (GeanyScintilla.ScintillaObject sci, int style, string font, int size);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_line_indentation")]
	[Version (since = "0.19")]
	public static void sci_set_line_indentation (GeanyScintilla.ScintillaObject sci, int line, int indent);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_marker_at_line")]
	public static void sci_set_marker_at_line (GeanyScintilla.ScintillaObject sci, int line_number, int marker);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_selection_end")]
	public static void sci_set_selection_end (GeanyScintilla.ScintillaObject sci, int position);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_selection_mode")]
	public static void sci_set_selection_mode (GeanyScintilla.ScintillaObject sci, int mode);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_selection_start")]
	public static void sci_set_selection_start (GeanyScintilla.ScintillaObject sci, int position);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_set_text")]
	public static void sci_set_text (GeanyScintilla.ScintillaObject sci, string text);
	[CCode (cheader_filename = "geanyplugin.h", cname = "sci_start_undo_action")]
	public static void sci_start_undo_action (GeanyScintilla.ScintillaObject sci);
	[CCode (cheader_filename = "geanyplugin.h", cname = "search_show_find_in_files_dialog")]
	[Version (since = "0.14")]
	public static void search_show_find_in_files_dialog (string dir);
	[CCode (cheader_filename = "geanyplugin.h", cname = "spawn_async")]
	[Version (since = "1.25")]
	public static bool spawn_async (string? working_directory, string? command_line, string? argv, string? envp, out GLib.Pid child_pid) throws GLib.Error;
	[CCode (cheader_filename = "geanyplugin.h", cname = "spawn_check_command")]
	[Version (since = "1.25")]
	public static bool spawn_check_command (string command_line, bool execute) throws GLib.Error;
	[CCode (cheader_filename = "geanyplugin.h", cname = "spawn_kill_process")]
	[Version (since = "1.25")]
	public static bool spawn_kill_process (GLib.Pid pid) throws GLib.Error;
	[CCode (cheader_filename = "geanyplugin.h", cname = "spawn_sync")]
	[Version (since = "1.25")]
	public static bool spawn_sync (string? working_directory, string? command_line, string? argv, string? envp, Geany.SpawnWriteData? stdin_data, GLib.StringBuilder? stdout_data, GLib.StringBuilder? stderr_data, out int exit_status) throws GLib.Error;
	[CCode (cheader_filename = "geanyplugin.h", cname = "spawn_write_data")]
	[Version (since = "1.25")]
	public static bool spawn_write_data (GLib.IOChannel channel, GLib.IOCondition condition, Geany.SpawnWriteData data);
	[CCode (cheader_filename = "geanyplugin.h", cname = "symbols_get_context_separator")]
	[Version (since = "0.19")]
	public static unowned string symbols_get_context_separator (int ft_id);
	[CCode (cheader_filename = "geanyplugin.h", cname = "tm_get_real_path")]
	[Version (deprecated = true)]
	public static string tm_get_real_path (string file_name);
